# pyalfe

./: .buildinfo  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  genindex.html  intro.html  objects.inv  pull_request_template.md  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: docs.yml  integration-test.yml  publish-to-test-pypi.yml  tests.yml
_modules/: index.html
_modules/pyalfe/: containers.html  data_structure.html  image_processing.html  image_registration.html  inference.html  main.html  pipeline.html
_modules/pyalfe/interfaces/: c3d.html  greedy.html
_modules/pyalfe/tasks/: initialization.html  quantification.html  registration.html  segmentation.html  skullstripping.html  t1_postprocessing.html  t1_preprocessing.html
_modules/pyalfe/utils/: archive.html  download.html
_sources/: intro.md
_sources/advanced/: extend.md
_sources/api/: api.md  data_structure.rst  image_processing.rst  image_registration.rst  main.rst
_sources/api/interfaces/: c3d.rst
_sources/api/tasks/: initialization.rst  segmentation.rst  skullstripping.rst  t1_preprocessing.rst
_sources/api/utils/: download.rst
_sources/guides/: api.md  install.md  tutorial.md  usage.md
advanced/: dev.html  extend.html
api/: api.html  containers.html  data_structure.html  image_processing.html  image_registration.html  inference.html  main.html  pipeline.html  roi.html
api/interfaces/: c3d.html  greedy.html
api/tasks/: initialization.html  quantification.html  registration.html  segmentation.html  skullstripping.html  t1_postprocessing.html  t1_preprocessing.html
api/utils/: archive.html  download.html
docs/: _config.yml  _toc.yml  index.md  intro.md  pull_request_template.md
docs/advanced/: dev.md  extend.md
docs/api/: containers.rst  image_processing.rst  inference.rst  main.rst  pipeline.rst  roi.rst
docs/api/interfaces/: greedy.rst
docs/api/tasks/: quantification.rst  registration.rst  t1_postprocessing.rst
docs/api/utils/: archive.rst
docs/guides/: dev.md  install.md  tutorial.md  usage.md
guides/: api.html  dev.html  install.html  tutorial.html  usage.html
pyalfe/: __init__.py  config.ini  containers.py  data_structure.py  image_processing.py  image_registration.py  inference.py  main.py  pipeline.py  roi.py
pyalfe/interfaces/: c3d.py  freesurfer.py  greedy.py
pyalfe/models/: __init__.py
pyalfe/tasks/: __init__.py  dicom_processing.py  initialization.py  quantification.py  registration.py  segmentation.py  skullstripping.py  t1_postprocessing.py  t1_preprocessing.py
pyalfe/tools/: __init__.py
pyalfe/utils/: __init__.py  archive.py  dicom.py  download.py  technique.py
tests/: test_image_processing.py  test_image_registration.py  test_integration.py  test_tasks.py  utils.py
tests/data/upenn_gbm/UPENN-GBM-00621/05152010/05-15-2010-NA-BrainTumor-12015/: 1-01.dcm
tests/data/upenn_gbm/UPENN-GBM-00621/05152010/05-15-2010-NA-BrainTumor-66887/: 1-01.dcm
tests/data/upenn_gbm/UPENN-GBM-00621/05152010/05-15-2010-NA-BrainTumor-75669/: 1-001.dcm
tests/data/upenn_gbm/UPENN-GBM-00621/05152010/05-15-2010-NA-BrainTumor-84625/: 1-001.dcm
tests/data/upenn_gbm/UPENN-GBM-00621/05152010/1.3.6.1.4.1.14519.5.2.1.237202555033384925495351346305824870058/: 001.dcm
tests/integration/: test_integration.py
tests/unit/: test_data_structure.py  test_image_processing.py  test_image_registration.py  test_tasks.py
