[build-system]
requires = [
    "setuptools >= 58.0.1"
]
build-backend = "setuptools.build_meta"

[project]
name = "pyalfe"
version = "0.0.1"
authors = [
    {name = "Reza Eghbali", email="eghbali68@gmail.com"},
    {email = "reza.eghbali@ucsf.edu"}
]
dependencies = [
    "scipy",
    "numpy",
    "Click",
    "dependency_injector",
    "torch",
    "pandas",
    "nibabel",
    "nilearn",
    "matplotlib",
    "nnunet"
]

[project.license]
file = "LICENSE"

[project.optional-dependencies]
ants = ["antspyx"]
radiomics = ["Pyradiomics"]
docs = ["jupyter-book"]

[project.scripts]
pyalfe = "pyalfe.main:main"

[tool.setuptools.package-data]
pyalfe = ["*.ini"]
"pyalfe.templates" = ["oasis/*.nii.gz"]

[tool.ruff]
line-length = 88
target-version = 'py39'
select = [
    'F',
    'E',
    'W',
    'UP',
]
exclude = [
    '.git',
    '.ruff_cache',
    'dist'
]

[tool.pytest.ini_options]
addopts = ["--ignore=tests/test_integration.py"]
