[build-system]
requires = [
    "setuptools >= 58.0.1"
]
build-backend = "setuptools.build_meta"

[project]
name = "pyalfe"
version = "0.1.1"
authors = [
    {name = "Reza Eghbali", email="eghbali68@gmail.com"},
    {email = "reza.eghbali@ucsf.edu"}
]
description = "A pipeline for Automated Lesion and Feature Extraction from brain MRIs"
readme = "README.md"
dependencies = [
    "scipy",
    "StrEnum",
    "numpy",
    "Click",
    "huggingface_hub",
    "torch",
    "pandas",
    "picsl_c3d",
    "picsl_greedy===0.0.6",
    "pybids",
    "nibabel",
    "nilearn",
    "matplotlib",
    "nnunet",
    "nnunetv2",
]

[project.license]
file = "LICENSE"

[project.optional-dependencies]
ants = ["antspyx"]
radiomics = ["Pyradiomics"]
docs = ["jupyter-book", "sphinx-click"]

[project.scripts]
pyalfe = "pyalfe.main:main"

[tool.setuptools.package-data]
pyalfe = ["*.ini"]
"pyalfe.templates" = ["oasis/*.nii.gz"]

[tool.setuptools]
packages = [
    "pyalfe",
    "pyalfe.interfaces",
    "pyalfe.models",
    "pyalfe.tasks",
    "pyalfe.tools",
    "pyalfe.utils"
]

[tool.ruff]
line-length = 88
target-version = 'py39'
select = [
    'F',
    'E',
    'W',
    'UP',
]
exclude = [
    '.git',
    '.ruff_cache',
    'dist'
]

[tool.ruff.per-file-ignores]
"**/__init__.py" = [
    'E402',
    'F401',
    'F403',
    'F405',
]

[tool.pytest.ini_options]
addopts = ["--ignore=tests/test_integration.py"]
